fix off screen video

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -19,6 +19,7 @@ body {
   font-family: "BrandonGrotesque", "Raleway", sans-serif;
   overflow-y: auto;
   overflow-x: hidden;
+  max-width: 100vw;
   color: $white-text;
 }
 html {
