--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -372,7 +372,7 @@
   margin: auto;
   position: relative;
   top: 0;
-
+  overflow-x: hidden;
   left: 0;
 }
 .reactPlayerCover {
@@ -381,11 +381,13 @@
   left: 0;
   width: 100%;
   height: 100%;
-
+  overflow-x: hidden;
   z-index: 99;
 }
 .reactPlayerWrap {
   position: relative;
+  overflow-x: hidden;
+  max-width: 100vw;
   height: 100%;
 }
 
